<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="percent_10">10%</string>
    <string name="percent_15">15%</string>
    <string name="percent_20">20%</string>
    <string name="tip_label">Tip is:</string>
    <string name="invalid_number_warning">Please enter a valid number</string>
    <string name="bill_total_hint">Enter bill total here</string>
    <string name="bill_total_empty">No bill total entered yet</string>

</resources>
