<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etBillTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/bill_total_hint" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/btn10Percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_10"
            android:onClick="process10Percent" />

        <Button
            android:id="@+id/btn15Percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_15"
            android:onClick="process15Percent" />

        <Button
            android:id="@+id/btn20Percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_20"
            android:onClick="process20Percent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/tvTipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_label" />

        <TextView
            android:id="@+id/tvTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tip_left_margin"
            android:text="@string/bill_total_empty" />

    </LinearLayout>

</RelativeLayout>